# endless

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/db/: __init__.py  base.py
app/db/migrations/: env.py
app/modules/: __init__.py
app/platform/: __init__.py  clock.py  db.py  events.py  logging.py  otel.py  outbox.py  redis.py  settings.py
app/worker/: __init__.py  main.py
docs/: architecture.md  right-sizing.md
tests/: test_clock.py  test_db_integration.py  test_events.py  test_main.py  test_otel.py  test_outbox.py  test_outbox_integration.py  test_redis_integration.py  test_worker.py
