[project]
name = "endless"
version = "0.1.0"
description = "Single-tenant jewelry ecommerce platform — modular monolith"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
]

# Persistence, cache, worker, and auth dependencies land with the modules that
# wire them: app/platform/{db,events,outbox,idempotency,auth} in F0.6.

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "import-linter>=2.1",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# ruff — lint + format (CLAUDE.md §5.1)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
# Repo root, so the top-level `app` package resolves as first-party for isort.
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length is enforced by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is the point of a test

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — strict (CLAUDE.md §5.1)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = true
show_error_codes = true
pretty = true
files = ["app", "tests"]

# ---------------------------------------------------------------------------
# pytest (CLAUDE.md §6)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "app"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires real Postgres/Redis via testcontainers (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# import-linter — module boundary enforcement (CLAUDE.md §1.1)
# Contracts are added per module as they land (F1.1 onward). The layering
# contract below applies from day one.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layering: api -> service -> domain; platform is shared"
type = "layers"
layers = ["app.api", "app.modules", "app.platform"]
exhaustive = false
