[project]
name = "endless"
version = "0.1.0"
description = "Single-tenant jewelry ecommerce platform — modular monolith"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    # Pinned to the 1.36 line: azure-monitor-opentelemetry's exporter is built
    # against ~=1.36 and breaks on 1.44+ (LogData moved out of sdk._logs). This
    # also aligns the instrumentation packages to the matching 0.57b0 series.
    "opentelemetry-api>=1.36,<1.37",
    "opentelemetry-sdk>=1.36,<1.37",
    # Persistence + cache (F0.6 Slice A). Async engine, driver, migrations, Redis.
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    # Worker + telemetry export (F0.6 Slice B). Arq drains the outbox; Azure
    # Monitor exports traces/metrics/logs when a connection string is configured.
    "arq>=0.26",
    "azure-monitor-opentelemetry>=1.6",
]

# Idempotency middleware and Entra JWT auth (F0.6 Slice B) add pyjwt[crypto].

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "import-linter>=2.1",
    "pre-commit>=4.0",
    # Integration tests spin up real Postgres/Redis (CLAUDE.md §6).
    "testcontainers[postgres,redis]>=4.9",
]

# cryptography is pulled in transitively (redis 5.x -> pyjwt[crypto], and our own
# Entra JWT validation in F0.6 Slice B). Versions >= 43 ship only
# macosx_10_9_universal2 wheels; this repo's dev machine resolves against a
# macosx_10_12_x86_64 interpreter with no OpenSSL/pkg-config toolchain, so newer
# versions fall back to a source build that cannot compile. 42.0.8 ships an exact
# macosx_10_12_x86_64 wheel (and manylinux wheels for Docker/CI) and is identical
# for RS256 verification. Constrain, don't add a direct dependency.
[tool.uv]
constraint-dependencies = ["cryptography>=42.0.8,<43"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# ruff — lint + format (CLAUDE.md §5.1)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
# Repo root, so the top-level `app` package resolves as first-party for isort.
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length is enforced by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is the point of a test

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — strict (CLAUDE.md §5.1)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = true
show_error_codes = true
pretty = true
files = ["app", "tests"]

# testcontainers ships no type stubs or py.typed marker.
[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

# azure-monitor-opentelemetry ships no py.typed marker.
[[tool.mypy.overrides]]
module = ["azure.monitor.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest (CLAUDE.md §6)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "app"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires real Postgres/Redis via testcontainers (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# import-linter — module boundary enforcement (CLAUDE.md §1.1)
# Contracts are added per module as they land (F1.1 onward). The layering
# contract below applies from day one.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layering: api -> service -> domain; platform is shared"
type = "layers"
layers = ["app.api", "app.modules", "app.platform"]
exhaustive = false
